# adapt

./: .gitignore  README.md  TEMPLATE.md  pyproject.toml
config/: .gitignore  settings.toml
src/: config.py
